# OpenTSLM

./: .gitignore  .gitmodules  .linkspector.yml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTORS.md  CURRICULUM_LEARNING_README.md  LICENSE.md  README.md  REUSE.toml  check_missing_checkpoints.py  compute_eval.py  constants.py  create_doctor_eval_dataset.py  curriculum_learning.py  curriculum_learning_interleaved.py  curriculum_learning_sanity_check.py  data.py  data_descr.md  dataset_setup_summary.md  eval_EmbedHealthFlamingo.py  eval_stage1_on_tsexam.py  eval_stage1_on_tsexam_fixed_log.txt  eval_stage1_on_tsexam_log.txt  eval_stage1_simple_prompt_log.txt  get_memory_use.py  hf_test.py  model_config.py  plot_memory_simulation.py  plot_memory_simulation_per_length.py  plot_memory_usage.py  pyproject.toml  recompute_accuracy.py  recompute_tsexam_accuracy.py  requirements.txt  run_all_datasets_missing.sh  run_all_memory.sh  run_all_memory_missing.sh  run_curriculum_distributed.sh  run_curriculum_nohup.sh  (+16 more)
.github/workflows/: publish.yml  static-analysis.yml
.reuse/templates/: opentslm.jinja2
data/: .gitignore
dataset_generation/: normal_dist_around_mean_generation.py
dataset_generation/cot/: generate_pamap_acc_cot.py  generate_pamap_cot.py  generate_pamap_cot_simple.py  generate_sleep_cot.py
dataset_generation/m4/: .gitignore  01_generate_m4_captions_batch.py  02_push_batch_requests.py  03_pull_batch_response.py  README.md  batch_m4_captions.py  config.py  generate_m4_captions.py  generate_m4_captions_batch.py  generate_m4_captions_improved.py  m4_utils.py  process_batch_requests.py  pull_batch_response.py  (+2 more)
evaluation/: .gitignore
model/: time_series_model.py
notebooks/: sleepedf_example.ipynb  sleepedf_example_expanded.ipynb  sleepedf_example_full.ipynb  sleepedf_example_updated2.ipynb
prompt/: __init__.py  prompt.py  prompt_with_answer.py  text_prompt.py  text_time_series_prompt.py
scripts/: create_doctor_eval_dataset.py  get_memory_use.py  hf_test.py  plot_memory_simulation.py  plot_memory_simulation_per_length.py  plot_memory_usage.py  run_all_memory.sh  run_all_memory_missing.sh
src/: data.py  logger.py  model_config.py
test/: ecg_qa_cot_test.py  ecg_qa_test.py  elastic_ddp.py  eval_EmbedHealthFlamingo.py  har_cot_test.py  m4_loader_test.py  pamap_cot_loader_test.py  sleepedf_cot_loader_test.py  smoke_test.py  test_baseline.py  test_curriculum.py  test_curriculum_trainer.py  test_inference.py  test_medgemma_support.py  test_train_EmbedHealthFlamingo.py  test_train_EmbedHealthSP.py
time_series_datasets/: M4QADataset.py  QADataset.py  TSQADataset.py  tsqa.py  util.py
(+237 files in other folders)
