#
# SPDX-FileCopyrightText: 2025 Stanford University, ETH Zurich, and the project authors (see CONTRIBUTORS.md)
#
# SPDX-License-Identifier: MIT
#

[project]
name = "opentslm"
version = "0.1.0"
description = "OpenTSLM: Open Time Series Language Model - Curriculum Learning for Multimodal Time Series Understanding with Large Language Models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Stanford Biodesign Digital Health Group"}
]
keywords = [
    "time-series",
    "large-language-models",
    "curriculum-learning",
    "multimodal",
    "healthcare"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "torch>=2.0",
    "tqdm>=4.62",
    "matplotlib>=3.3",
    "scikit-learn>=1.0",
    "transformers>=4.25",
    "huggingface-hub>=0.16",
    "datasets>=2.0",
    "peft>=0.4",
    "requests>=2.28",
    "einops>=0.6",
    "wfdb>=4.0",
    "open-flamingo>=0.0.2",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

eval = [
    "openai>=1.0",
]

notebook = [
    "jupyter>=1.0",
    "ipython>=8.0",
]

[project.urls]
Repository = "https://github.com/StanfordBDHG/EmbedHealth"
"Bug Tracker" = "https://github.com/StanfordBDHG/EmbedHealth/issues"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable lint rules, including import sorting (isort) and unused-import detection.
select = [
    "E",    # pycodestyle errors
    #"F",    # Pyflakes (includes unused imports: F401)
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize code/imports)
]

ignore = [
    "E741", # Ambiguous variable name
    "E501", # Line too long
    "E402", # Module level import not at top of file. TODO: remove with proper package structure
]

fixable = ["ALL"]


[tool.ruff.lint.isort]
# Treat this package as first-party to group imports correctly.
known-first-party = ["opentslm"]
# Prefer combining "as" imports and keep sections tightly sorted.
combine-as-imports = true
force-sort-within-sections = true
# Place two blank lines after the import block (typical project style).
lines-after-imports = 2
